Dia-1/spree-ecommerce/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: db
    app: ecommerce
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      service: db
      app: ecommerce
  strategy: {}
  template:
    metadata:
      labels:
        service: db
        app: ecommerce
      annotations:
      ## Coleta métricas do Postgres
        ad.datadoghq.com/postgres.checks: |
          {
            "postgres": {
              "instances": [
                {
                  "host": "%%host%%",
                  "port":"5432",
                  "username":"user",
                  "password":"datadog"
                }
              ]
            }
          }
    spec:
      containers:
      - image: postgres:11-alpine
        name: postgres
        ports:
          - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgresdb 
      serviceAccountName: postgres
      volumes:
      - name: postgresdb
        persistentVolumeClaim:
            claimName: task-pvc-volume
            readOnly: false
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ecommerce
    service: db 
  name: db
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: ecommerce
    service: db
status:
  loadBalancer: {}
